<resources>
    <string name="app_name">LionHeartApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="likes">likes</string>
    <string name="categories">Categories</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>
    <string name="films">Films</string>
    <string name="fashion">Fashion</string>
    <string name="people">People</string>
    <string name="nature">Nature</string>
    <string name="imageofnature">imageOfNature</string>
    <string name="imageoffilm">imageOfFilm</string>
    <string name="imageoffashion">imageOfFashion</string>
    <string name="imageofevents">imageOfEvents</string>
    <string name="imageofpeople">imageOfPeople</string>
    <string name="mainimage">mainImage</string>
    <string name="creator_name">Creator name</string>
    <string name="bio">Bio: </string>
    <string name="this_is_the_desc">This is the desc</string>
    <string name="likeimage">likeImage</string>
    <string name="_10_likes">10 likes</string>
    <string name="editedimage">editedImage</string>
    <string name="normal">Normal</string>
    <string name="nofilterimage">noFilterImage</string>
    <string name="starlit">Starlit</string>
    <string name="starlitimage">starLitImage</string>
    <string name="blue_mess">Blue Mess</string>
    <string name="bluemessimage">blueMessImage</string>
    <string name="awe_struck">Awe Struck</string>
    <string name="awestruckimage">aweStruckImage</string>
    <string name="lime_stutter">Lime Stutter</string>
    <string name="limeimage">limeImage</string>
    <string name="night_whisper">Night Whisper</string>
    <string name="nightwisperimage">nightWisperImage</string>
    <string name="postimage">postImage</string>
    <string name="pagerimage">pagerImage</string>
    <string name="by_timothy_timothy_timothy">by Timothy Timothy Timothy</string>
    <string name="creatorimage">creatorImage</string>
    <string name="filters">Filters</string>
    <string name="customize">Customize</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="photos">Photos</string>
    <string name="top_picks">Top Picks</string>
    <string name="it_seems_you_ve_disabled_your_connection_to_the_internet">It seems you\'ve disabled your connection to the internet.</string>
    <string name="nowifiicon">NoWifiIcon</string>
    <string name="reset">Reset</string>
</resources>