<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EditImageFragment"
    android:background="#191919"
    >

    <ImageView
        android:id="@+id/currentPhoto"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/viewpageritem4"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/editedimage" />

        <HorizontalScrollView
            android:id="@+id/filterCardViewHolder"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:backgroundTint="#191919"

            android:paddingHorizontal="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


    <LinearLayout
        android:id="@+id/filterHolder"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginHorizontal="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:paddingBottom="6dp"
                android:backgroundTint="#191919"
                android:background="#191919"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/noFilter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="bottom"
                android:contentDescription="@string/nofilterimage" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginHorizontal="5dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starlit"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:paddingBottom="5dp"
                android:backgroundTint="#191919"
                android:background="#191919"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/starLitFilter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="bottom"
                android:contentDescription="@string/starlitimage" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginHorizontal="5dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_mess"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:paddingBottom="5dp"
                android:backgroundTint="#191919"
                android:background="#191919"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/blueMessFilter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="bottom"
                android:contentDescription="@string/bluemessimage" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginHorizontal="5dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/awe_struck"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:paddingBottom="5dp"
                android:backgroundTint="#191919"
                android:background="#191919"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/aweStruckVibeFilter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="bottom"
                android:contentDescription="@string/awestruckimage" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginHorizontal="5dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lime_stutter"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:paddingBottom="5dp"
                android:backgroundTint="#191919"
                android:background="#191919"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/limeStutterFilter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="bottom"
                android:contentDescription="@string/limeimage" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginHorizontal="5dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/night_whisper"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:paddingBottom="5dp"
                android:backgroundTint="#191919"
                android:background="#191919"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/nightWhisperFilter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="bottom"
                android:contentDescription="@string/nightwisperimage" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
        </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>