<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.DetailFragment"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/detailedImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:transitionName="image_big"
        android:src="@drawable/imagify"

        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/mainimage" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/detailedCreatorImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_launcher_background"
        app:shapeAppearanceOverlay="@style/circleImageViewStyle"

        android:layout_margin="10dp"
            
        app:layout_constraintTop_toBottomOf="@id/detailedLikeIcon"
        app:layout_constraintStart_toStartOf="parent" />
    
    <TextView
        android:id="@+id/detailedCreatorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/creator_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"

        app:layout_constraintStart_toEndOf="@id/detailedCreatorImage"
        app:layout_constraintTop_toBottomOf="@id/detailedLikes"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detailPreBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="18sp"

        android:layout_margin="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailedCreatorImage" />

    <TextView
        android:id="@+id/detailedDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/this_is_the_desc"
        android:textSize="19sp"
        android:maxLines="2"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="10dp"

        app:layout_constraintStart_toEndOf="@id/detailPreBio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailedCreatorImage"
        />
    
    <ImageView
        android:id="@+id/detailedLikeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_like"
        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@id/detailedImage"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/likeimage" />

    <TextView
        android:id="@+id/detailedLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_likes"

        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"

        app:layout_constraintTop_toBottomOf="@id/detailedImage"
        app:layout_constraintStart_toEndOf="@id/detailedLikeIcon"
        />

</androidx.constraintlayout.widget.ConstraintLayout>